--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bootstrap": "4.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "reactstrap": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
